# cplusplus-binding-template

./: CMakeLists.txt  README.md  build.bat  cppbindingtemplate_dotnet_shim.cpp  rename_project.bat  rename_project.ps1  rename_project.sh  test_rename_unix.sh  test_rename_windows.bat
.github/workflows/: ci.yml  test-rename.yml
dotnet/: CppBindingTemplate.csproj  CppBindingTemplate.sln  HelloWorldProvider.cs  NativeLibrary.cs  README.md
dotnetExample/: Example.csproj  Program.cs
include/cppbindingtemplate/: cppbindingtemplate.h
src/cppbindingtemplate/: cppbindingtemplate.cpp
tests/: test.cpp
